renamed route from admin products and variants to base
